# layman

./: .cursorrules  .gitignore  .markdownlint.json  .rules.md  BUILD_LOGS_GUIDE.md  CHANGELOG.md  LOGS_AND_DIAGNOSTICS.md  MCP_OBSERVABILITY_GUIDE.md  OPEN_QUESTIONS.md  README.md  README_LOGGING.md  config.toml  example_sway_config  justfile  package.json  pnpm-lock.yaml  pyproject.toml  ty.toml  wrangler.toml
docs/: CONTRIBUTING.md  DEVELOPMENT.md  README.md  bug-fix-report.md  decisions.md  demo-design.md  demo-tasks.md  demo.md
docs/api/: README.md  config.md  core.md  layout-manager.md
docs/architecture/: README.md  components.md  event-flow.md  ipc.md  overview.md
docs/configuration/: README.md  config-reference.md  examples.md  options.md  presets.md  session-management.md  sway-integration.md  window-rules.md
docs/development/: README.md  contributing.md  future-testing-improvements.md  setup.md  testing.md  tooling.md
docs/layouts/: README.md  autotiling.md  custom-layouts.md  grid.md  master-stack.md  tabbed-pairs.md  three-column.md
docs/roadmap/: README.md  bugs.md  code-simplification.md  command-naming.md  fake-fullscreen.md  features.md  improvements.md  modernization.md  session-restore.md  sway-ipc-optimization.md  tabbed-pairs.md  task-list.md  three-column.md  type-safety.md
scripts/: diagnose-build.sh  validate_mermaid.py
site/: .gitignore  astro.config.mjs  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  wrangler.jsonc
site/demo/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
site/demo/src/: App.test.tsx  App.tsx  index.css
site/e2e/: demo.spec.ts  site.spec.ts
site/src/demo/: App.test.tsx  App.tsx
site/src/pages/: 404.astro  index.astro
src/: config.py  layman.py
src/layman/: __main__.py  config.py  factory.py  focus_history.py  layman.py  listener.py  log.py  perf.py  presets.py  rules.py  server.py  session.py  utils.py
src/layman/managers/: __init__.py  autotiling.py  grid.py  (+4 more)
src/managers/: MasterStackLayoutManager.py  WorkspaceLayoutManager.py
tests/: __init__.py  conftest.py
tests/integration/: test_event_handling.py
tests/mocks/: __init__.py  i3ipc_mocks.py
tests/unit/: test_command_routing.py  test_config.py  test_fake_fullscreen.py  test_layman.py  test_layman_extended.py  test_layman_more.py  test_listener.py  test_logging.py  test_perf.py  test_polish.py  test_server.py  test_session.py  test_session_extended.py  test_utils.py
website/: index.html  reindent.py
(+51 files in other folders)
