[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "layman"
version = "0.2.0"
description = "A daemon that handles sway/i3 layout management on a per-workspace basis"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Joe Maples", email = "joe@maples.dev" }
]
dependencies = [
    "i3ipc>=2.2.1",
    "pyyaml>=6.0.3",
    "setproctitle>=1.3.1",
    "tomli>=2.0.1",
]

[project.scripts]
layman = "layman.__main__:main"

[project.urls]
Homepage = "https://github.com/mschulkind/layman"
Repository = "https://github.com/mschulkind/layman"
Documentation = "https://github.com/mschulkind/layman/tree/master/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/layman"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ty",
    "radon>=6.0.0",
]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (require Sway/i3)",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/layman"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E722",   # Bare except (existing code pattern)
    "B008",   # Do not perform function calls in argument defaults
    "B020",   # Loop control variable overrides (existing code pattern)
    "UP031",  # Use format specifiers (existing code uses %)
    "SIM103", # Return condition directly (readability preference)
    "SIM105", # Use contextlib.suppress (existing code pattern)
    "SIM108", # Use ternary (readability preference)
    "SIM115", # Use context manager (existing code pattern)
    "RUF015", # Prefer next(iter()) (minor optimization)
]

[tool.ruff.lint.isort]
known-first-party = ["layman"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
